--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -35,6 +35,9 @@
       <label>Code input <input id="code" type="text" value="" /></label>
       <button id="getToken">Get Token</button>
       <p id="accessToken"></p>
+      <h4>Step 3: Get the calendar events using your access token</h4>
+      <button id="getEvents">Get Events</button>
+      <p id="events"></p>
     </main>
     <script type="text/javascript">
       const getAuthUrlButton = document.getElementById("getAuthUrlButton");
@@ -75,6 +78,24 @@
           })
           .then(function (json) {
             accessTokenElement.innerText = JSON.stringify(json);
+          });
+      };
+
+      const getEvents = document.getElementById("getEvents");
+      const events = document.getElementById("events");
+      const getCalendarEvents =
+        "https://ha2p5d02y8.execute-api.eu-central-1.amazonaws.com/dev/api/get-events";
+
+      getEvents.onclick = function () {
+        const { access_token } = JSON.parse(accessTokenElement.innerText);
+        const eventRequest = getCalendarEvents + "/" + access_token;
+        console.log("Access Token", access_token);
+        fetch(eventRequest)
+          .then(function (response) {
+            return response.json();
+          })
+          .then(function (json) {
+            events.innerText = JSON.stringify(json, null, 2);
           });
       };
     </script>
