--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -20,12 +20,15 @@
 
     <main id="container">
       <h1>OAuth2 Test</h1>
+
+      <!-- Step 1 -->
       <h4><b>Step 1:</b> Get the Auth URL</h4>
       <p>Click the button below to get your auth url.</p>
       <button id="getAuthUrlButton">Get OAuth URL</button>
       <p id="result"></p>
       <a id="authURL" href target="_blank">Click to authorize</a>
 
+      <!-- Step 2 -->
       <h4>Step 2: Get your code and exchange for an access token</h4>
       <p>
         After you're redirected back to your Meet app on GitHub, copy the code
@@ -35,17 +38,29 @@
       <label>Code input <input id="code" type="text" value="" /></label>
       <button id="getToken">Get Token</button>
       <p id="accessToken"></p>
+
+      <!-- Step 3 -->
       <h4>Step 3: Get the calendar events using your access token</h4>
       <button id="getEvents">Get Events</button>
       <p id="events"></p>
     </main>
     <script type="text/javascript">
+      // Select the 'Get OAuth URL' button
       const getAuthUrlButton = document.getElementById("getAuthUrlButton");
+
+      // Paragraph element where getAuth url result will be returned to
       const resultElement = document.getElementById("result");
+
+      //The link to the authURL the anchor element uses
       const resultLink = document.getElementById("authURL");
+
+      // The Lambda endpoint API link for the getAuthURL function
       const getAuthURL =
         "https://ha2p5d02y8.execute-api.eu-central-1.amazonaws.com/dev/api/get-auth-url";
 
+      // When 'Get OAuth URL' button if clicked a function will be called which will fetch the getAuthURL endpoint function
+      // After clicking the 'Click to authorize' anchor element function will open a new tab to the Google OAuth signin window
+      // After signing and approving app access you should be redirected to Meet app home page with a authorisation code in the URL
       getAuthUrlButton.onclick = function () {
         fetch(getAuthURL)
           .then(function (response) {
@@ -59,19 +74,33 @@
           });
       };
 
+      // Selects the 'Get Token' input label
       const codeValue = document.getElementById("code");
+
+      // The 'Get Token' button
       const getAccessToken = document.getElementById("getToken");
+
+      // The paragraph element where the token response will be appended to
       const accessTokenElement = document.getElementById("accessToken");
+
+      // The getToken Lambda function api endpoint
       const getToken =
         "https://ha2p5d02y8.execute-api.eu-central-1.amazonaws.com/dev/api/token";
 
+      // When 'Get Token' button is clicked function executed
       getAccessToken.onclick = function () {
+        // Value from the input
         let code = codeValue.value;
 
+        // Checks if code has been encoded, if not then encodes code
         if (decodeURIComponent(code) === code) {
           code = encodeURIComponent(codeValue.value);
         }
+
+        // The Lambda getToken API endpoint with the encoded code added to end
         const getTokenRequest = getToken + "/" + code;
+
+        // Fetch request made to the Lambda endpoint
         fetch(getTokenRequest)
           .then(function (response) {
             return response.json();
